# kstodon

./: .gitignore  .gitmodules  BUILD.gn  README.md  build.sh
src/: config.hpp  main.cpp
src/applications/koreannews/: BUILD.gn  constants.cpp  constants.hpp  koreannews.hpp  main.cpp  news.cpp  news.hpp  posts.json  test.hpp
src/applications/koreannews/db/: database_connection.cpp  psqlorm.hpp
src/applications/technews/: BUILD.gn  constants.cpp  constants.hpp  main.cpp  news.cpp  news.hpp  posts.json  technews.hpp
src/kstodon/: BUILD.gn  config.hpp  kstodon.cpp  kstodon.hpp  main.cpp
src/kstodon/bot/: bot.hpp
src/kstodon/client/: client.cpp  client.hpp
src/kstodon/common/: constants.hpp  interface.hpp  mastodon_util.hpp  request.hpp  types.hpp  util.hpp
src/kstodon/common/auth/: auth.hpp
test/ut_kstodon/: BUILD.gn  kstodon.test.cpp  kstodon.test.hpp
