all_tests = [
  "//test/ut_kstodon",
]

executable("kstodon") {
  public_deps = [
    "//src/kstodon:kstodon_sources"
  ]

  include_dirs = [
    "//src",
    "//third_party/json/include",
  ]

  libs = [
    "pthread",
    "crypto",
    "cpr",
    "curl",
  ]


  sources = [
    "//src/main.cpp",
  ]
}

group("tests") {
  testonly = true
  deps = all_tests
}
