config("json") {
  include_dirs = [
    "//third_party/json/include",
  ]
}

config("html") {
  include_dirs = [
    "//third_party/HtmlBuilder/include"
  ]
}

config("cpr") {
  include_dirs = [
    "//third_party/cpr/include"
  ]
}

config("knlp") {
  include_dirs = [
    "//third_party/knlp/src/nlp"
  ]
}

source_set("knlp_sources") {
  sources = [
    "//third_party/knlp/src/nlp/nlp.cpp"
  ]
}

source_set("ini_reader") {
  sources = [
    "//src/kstodon/common/ini.c",
    "//src/kstodon/common/INIReader.cpp"
  ]
}

source_set("kstodon_sources") {

  deps = [
    ":ini_reader",
    ":knlp_sources"
  ]

  public_configs = [
    # ":inih",
    ":cpr",
    ":json",
    ":html",
    ":knlp"
  ]

  include_dirs = [
    "//src",
  ]

  libs = [
    "crypto",
    "cpr",
    "curl",
  ]

  sources = [
    "//src/kstodon/client/client.cpp"
  ]
}

executable("kstodon") {
  deps = [
    ":kstodon_sources"
  ]

  include_dirs = [
    "//src",
    "//third_party/json/include",
  ]

  libs = [
    "pthread",
    "crypto",
    "cpr",
    "curl"
  ]

  sources = [
    "//src/kstodon/main.cpp"
  ]
}
