config("json") {
  include_dirs = [
    "//third_party/json/include",
  ]
}

config("html") {
  include_dirs = [
    "//third_party/HtmlBuilder/include"
  ]
}

config("cpr") {
  include_dirs = [
    "//third_party/cpr/include"
  ]
}

config("knlp") {
  include_dirs = [
    "//third_party/knlp/src/nlp"
  ]
}

source_set("knlp_sources") {
  sources = [
    "//third_party/knlp/src/nlp/nlp.cpp"
  ]
}

config("inih") {
  include_dirs = [
    "//third_party/inih/cpp"
  ]
}

source_set("ini_reader") {
  sources = [
    "//third_party/inih/ini.c",
    "//third_party/inih/cpp/INIReader.cpp"
  ]
}

source_set("kstodon_sources") {

  deps = [
    ":ini_reader",
    ":knlp_sources"
  ]

  public_configs = [
    ":inih",
    ":cpr",
    ":json",
    ":html",
    ":knlp"
  ]

  include_dirs = [
    "//src",
  ]

  libs = [
    "crypto",
    "cpr",
    "curl",
  ]

  sources = [
    "//src/kstodon/client/client.cpp"
  ]
}

executable("kstodon") {
  deps = [
    ":kstodon_sources"
  ]

  include_dirs = [
    "//src",
    "//third_party/json/include",
  ]

  libs = [
    "pthread",
    "crypto",
    "cpr",
    "curl"
  ]

  sources = [
    "//src/kstodon/main.cpp"
  ]
}

shared_library("kstodon_lib") {
  deps = [
    ":kstodon_sources"
  ]

  include_dirs = [
    "//src",
    "//third_party/json/include",
  ]

  libs = [
    "pthread",
    "crypto",
    "cpr",
    "curl"
  ]

  sources = [
    "//src/kstodon/main.cpp"
  ]
}