config("kjson") {
  include_dirs = [
    "//third_party/kjson",
    "//third_party/json/include",
  ]
}

config("html") {
  include_dirs = [
    "//third_party/HtmlBuilder/include"
  ]
}

config("knlp") {
  include_dirs = [
    "//third_party/knlp/src/nlp"
  ]
}

source_set("knlp_sources") {
  sources = [
    "//third_party/knlp/src/nlp/nlp.cpp"
  ]
}

config("inih") {
  include_dirs = [
    "//third_party/inih/cpp"
  ]
}

source_set("ini_reader") {
  sources = [
    "//third_party/inih/ini.c",
    "//third_party/inih/cpp/INIReader.cpp"
  ]
}

config("cpr_library") {
  include_dirs = [cpr_include]
  libs = ["cpr"]
  visibility = [ ":cpr_lib" ]
}

group("cpr_lib") {
  public_configs = [":cpr_library"]
}

source_set("kstodon_sources") {

  deps = [
    ":ini_reader",
    ":knlp_sources"
  ]

  public_deps = [
    ":cpr_lib",
  ]

  public_configs = [
    ":inih",
    ":kjson",
    ":html",
    ":knlp"
  ]

  include_dirs = [
    "//src",
  ]

  sources = [
    "//src/kstodon/client/client.cpp"
  ]
}

executable("kstodon") {
  deps = [
    ":kstodon_sources"
  ]

  include_dirs = [
    "//src",
  ]

  sources = [
    "//src/kstodon/main.cpp"
  ]
}

shared_library("kstodon_lib") {
  deps = [
    ":kstodon_sources"
  ]

  include_dirs = [
    "//src",
  ]

  sources = [
    "//src/kstodon/main.cpp"
  ]
}
