config("psql_config") {
  include_dirs = ["//third_party/psql_orm/src"]

  libs = [
    "//third_party/psql_orm/libpsqlorm.a",
    "/usr/local/lib/libpqxx.a",
    "pq",
    "pqxx"
  ]
}

executable("technews") {
  public_deps    = ["//src/kstodon:kstodon_sources"]
  public_configs = ["//src/applications/koreannews:psql_config", "//src/applications/koreannews:xml"]
  include_dirs   = ["//src"]
  sources        = ["//src/applications/technews/main.cpp",
                    "//src/applications/technews/news.cpp"]
}
